# flask-desafio

./: README.md  pyproject.toml
flask_desafio/: app.ipynb  main.py  pessoas.xlsx
