[tool.poetry]
name = "flask-desafio"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo <ducameneses16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
ipykernel = "^6.28.0"
werkzeug = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
